<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="activities.kartau.android.gui.About">

    <item android:id="@+id/action_support"
        android:title="@string/support_menu"
        yourapp:showAsAction="always" />
    <item android:id="@+id/action_login"
        android:title="@string/login_menu"
        yourapp:showAsAction="always" />
    <!-- Settings, should always be in the overflow -->

    <item android:id="@+id/action_logout"
        android:title="@string/logout_menu"
        yourapp:showAsAction="always" />
    <item android:id="@+id/action_status"
        android:title="Status"
        android:icon="@drawable/statusoff"
        yourapp:showAsAction="always" />
</menu>
