<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeScreen">

    <LinearLayout
        android:id="@+id/loginMainLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#F2CA31">

        <LinearLayout
            android:id="@+id/loginTitleMainLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:background="#F2CA31"
            >

            <LinearLayout
                android:id="@+id/loginTitleMarginTop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="5"/>

            <RelativeLayout
                android:id="@+id/loginTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="3">
                <TextView
                    android:id="@+id/loginTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60dp"
                    android:textColor="#FFFFFF"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_title"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginUserInputLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:background="#F2CA31"
            android:minHeight="190dp"
            >


            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:textSize="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:hint="@string/login_username"
                android:background="#F5D964"
                android:ems="10"
                android:textColor="#78786E"
                />

            <EditText
                android:id="@+id/loginDevice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:textSize="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:hint="@string/login_device"
                android:background="#F5D964"
                android:ems="10"
                android:textColor="#78786E"/>

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:textSize="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:hint="@string/login_password"
                android:background="#F5D964"
                android:ems="10"
                android:textColor="#78786E"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="#F2CA31"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/loginLoginButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#F2CA31"
                android:orientation="horizontal"
                >


                <Button
                    android:id="@+id/loginLoginButton"
                    style="?android:attr/buttonStyleSmall"
                    android:textSize="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/login_login_button"
                    android:layout_centerHorizontal="true"
                    android:textColor="#FFFFFF"
                    android:background="#78786E"
                    android:onClick="goLogin"/>



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/loginLinkTextLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="#F2CA31"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/loginRecoverPasswordText"
                    android:textSize="22dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/login_recoverPassword"
                    android:layout_centerHorizontal="true"
                    android:textColor="#78786E"
                    android:clickable="true"
                    android:onClick="goResetPassword"/>

                <TextView
                    android:id="@+id/loginGoToWebsiteText"
                    android:textSize="22dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/loginRecoverPasswordText"
                    android:text="@string/login_websiteLink"
                    android:layout_centerHorizontal="true"
                    android:textColor="#78786E"
                    android:clickable="true"
                    android:onClick="goWebsiteLogin"/>


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>