<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mapsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mapsTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="#F2CA31"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mapsTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/maps_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mapsControlLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="#F2CA31"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/mapsControlSliderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mapsControlSeekBarText"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:text="@string/maps_seekbar_text" />

            <SeekBar
                android:id="@+id/mapsControlSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#78786E"
                android:progressBackgroundTint="#F5D964"
                android:progressTint="#F5D964"
                android:thumbTint="#78786E" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/mapsControlButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/mapsControlButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="4"
                android:background="#78786E"
                android:onClick="refresh"
                android:text="@string/refresh"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/mapsMapLayoutScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="39"
        android:background="#F5D964"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mapsMapLayoutInsideWrapper"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mapsMapLayoutMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:text="@string/maps_cannot_connect_message"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#78786E"
                android:textSize="20dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/mapsMapCancelButtonLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:orientation="vertical"
                android:visibility="gone">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mapsMapMainButtonLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mapsMapToggleButtonLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="#78786E"
        android:orientation="horizontal"/>

    <LinearLayout
        android:id="@+id/mapsNavButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mapsProfileButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mapsProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:onClick="goProfile"
                android:scaleType="centerInside"
                android:src="@drawable/profile2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mapsMapsButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/mapsMapsButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/broadcast" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>

